Fixed layout issue for non existing sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
@@ -6,4 +6,4 @@ body {
 
 #root {
   min-height: 100vh;
-}
+} */
